RESOLVED FIXED175683
Fix the build on other platforms after r220865
https://bugs.webkit.org/show_bug.cgi?id=175683
Summary Fix the build on other platforms after r220865
Wenson Hsieh
Reported 2017-08-17 13:08:09 PDT
Currently, NSItemProvider-related UIPasteboard APIs only exist in the iOS 11 SDK. I tried to guard iOS 10 codepaths in PlatformPasteboardIOS.mm with __IPHONE_OS_VERSION_MAX_ALLOWED < 110000 and assume that item provider APIs would be available otherwise, but this is not the case. Revert to special casing code that uses item provider APIs with __IPHONE_OS_VERSION_MIN_REQUIRED >= 110000, instead of the inverse.
Attachments
Patch (11.79 KB, patch)
2017-08-17 13:25 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-08-17 13:25:20 PDT
Wenson Hsieh
Comment 2 2017-08-17 14:50:18 PDT
Comment on attachment 318409 [details] Patch Thanks Tim!
WebKit Commit Bot
Comment 3 2017-08-17 15:20:06 PDT
Comment on attachment 318409 [details] Patch Clearing flags on attachment: 318409 Committed r220883: <http://trac.webkit.org/changeset/220883>
WebKit Commit Bot
Comment 4 2017-08-17 15:20:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-08-17 15:21:03 PDT
Note You need to log in before you can comment on or make changes to this bug.