Fix the build on other platforms after r220865 https://bugs.webkit.org/show_bug.cgi?id=175683

Reviewed by Tim Horton.

Source/WebCore:

Instead of special casing iOS 10 behavior with __IPHONE_OS_VERSION_MAX_ALLOWED < 110000, revert to special
casing iOS 11 behavior with __IPHONE_OS_VERSION_MAX_ALLOWED >= 110000. This is because other targets that are
neither iOS 10 nor 11 will fail the "before iOS 11" compile-time check, and subsequently assume that item
providers exist. To fix this, flip the compiler-time checks and the order of codeblocks in the
PlatformPasteboard::write methods.

There is no change in behavior.

* platform/ios/PlatformPasteboardIOS.mm:
(WebCore::registerItemToPasteboard):
(WebCore::PlatformPasteboard::write):

Tools:

Check __IPHONE_OS_VERSION_MAX_ALLOWED instead of __IPHONE_OS_VERSION_MIN_REQUIRED in an SPI header. SPI
availability is determined by SDK version rather than deployment version.

* TestWebKitAPI/ios/UIKitSPI.h:


Canonical link: https://commits.webkit.org/192352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220883 268f45cc-cd09-0410-ab3c-d52691b4dbfc